# helldivers2-rs

./: Cargo.toml
src/: extract.rs  main.rs  pndb.rs  structs.rs
src/types/: mod.rs  string.rs  texture.rs  unit.rs  wwise.rs
