[package]
name = "helldivers2-rs"
version = "0.1.0"
edition = "2021"
authors = ["nblock <nblock@nblock.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
binrw = "0.13"
num-traits = "0.2"
num-derive = "0.4"
num = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
